allprojects {


    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'jacoco'

    java {
        targetCompatibility = JavaVersion.VERSION_17
        sourceCompatibility = JavaVersion.VERSION_17
    }

    jacoco {
        toolVersion = "0.8.11"
    }

    test {
        useJUnitPlatform()
        finalizedBy jacocoTestReport // ✅ Generate report after tests
    }

    jacocoTestReport {
        dependsOn test // ✅ Tests must run before generating report
        reports {
            xml.required = true
            html.required = true
            csv.required = true
        }
    }

    dependencies {

        // Use JUnit Jupiter for testing.
        testImplementation "org.junit.jupiter:junit-jupiter:${junit_jupiter_version}"
        testImplementation "org.junit-pioneer:junit-pioneer:${junit_pioneer_version}"

        // Mockito for mocking
        testImplementation "org.mockito:mockito-core:${mockito_version}"

        // Optional: Mockito JUnit 5 integration
        testImplementation "org.mockito:mockito-junit-jupiter:${mockito_version}"

        testImplementation "org.testcontainers:junit-jupiter:${pg_test_container_version}"

        // Testcontainers for PostgreSQL
        testImplementation "org.testcontainers:postgresql:${pg_test_container_version}"

        testImplementation "org.flywaydb:flyway-core:${pg_flyway_version}"
        testImplementation "org.flywaydb:flyway-database-postgresql:${pg_flyway_version}"

        // Testcontainers Core Dependency
        testImplementation "org.testcontainers:testcontainers:${localstack_version}"

        // Testcontainers LocalStack Module
        testImplementation "org.testcontainers:localstack:${localstack_version}"

        // For working with the PG data source
        implementation "org.postgresql:postgresql:${pg_jdbc_driver_version}"

        implementation "org.apache.logging.log4j:log4j-core:${log4j_version}"
        implementation "org.apache.logging.log4j:log4j-api:${log4j_version}"

        compileOnly "org.projectlombok:lombok:${lombok_version}"
        annotationProcessor "org.projectlombok:lombok:${lombok_version}"
    }
}
